02052023_licenta/flaskapp/CTFRepo-inshack/web/crimemail/kube-deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ctf-web-crimemail-service
  namespace: ctfspace
spec:
  selector:
    app: ctf-web-crimemail
  type: ClusterIP
  ports:
    - name: crimemail
      protocol: TCP
      port: 8081
      targetPort: 80
