02052023_licenta/flaskapp/CTFRepo-inshack/web/crimemail/kube-deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ctf-web-crimemail-ingress
  namespace: ctfspace
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/secure-backends: "false"
    nginx.ingress.kubernetes.io/insecure-skip-tls-verify: "true"
spec:
  rules:
    - http:
        paths:
          - path: /crimemail
            pathType: Prefix
            backend:
              service:
                name: ctf-web-crimemail-service
                port:
                  number: 8081
                  
                  
Mai uitete
